src/test/ui/unsized-locals/unsized-exprs3.stderr
error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/unsized-exprs3.rs:8:5
   |
LL |     udrop as fn([u8]);
   |     ^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
   = note: all function arguments must have a statically known size
   = help: unsized fn params are gated as an unstable feature

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
